--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "type": "git",
     "url": "git+https://github.com/anna-yeddi/platforms.git"
   },
-  "author": "",
+  "author": "Anna Yeddi",
   "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/anna-yeddi/platforms/issues"
   },
   "homepage": "https://github.com/anna-yeddi/platforms#readme",
-  "description": ""
+  "description": "Test package",
+  "devDependencies": {
+    "@babel/cli": "^7.24.6",
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
